<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="0.8">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_1"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_2"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_3"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_4"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_5"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button8"
                app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_6"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/button3" />

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_7"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button_dot"
                app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_8"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button0"
                app:layout_constraintEnd_toStartOf="@+id/button9"
                app:layout_constraintStart_toEndOf="@+id/button7"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_9"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button_equals"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button8"
                app:layout_constraintTop_toBottomOf="@+id/button6" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_dot"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

            <Button
                android:id="@+id/button_equals"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="equals"
                android:text="@string/button_equals"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button0"
                app:layout_constraintTop_toBottomOf="@+id/button9" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_0"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_equals"
                app:layout_constraintStart_toEndOf="@+id/button_dot"
                app:layout_constraintTop_toBottomOf="@+id/button8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="clear"
                android:text="@string/button_CLR"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/button_plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_plus"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button_minus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_clear" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_minus"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button_times"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_plus" />

            <Button
                android:id="@+id/button_times"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_times"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button_divided"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_minus" />

            <Button
                android:id="@+id/button_divided"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button_divided"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_times" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>